--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -82,3 +82,27 @@ footer {
     padding: 10px;
     color: white;
 }
+
+.informacion {
+    text-align: center;
+    padding: 40px;
+}
+
+.vendedor{
+    display: inline-block;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.equipo {
+    text-align: center;
+}
+
+.vendedor>img {
+    width: 150px;
+    height: 150px;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 90px;
+    object-fit: cover;
+}
