--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,3 +3,57 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.header>img {
+    width: 75px;
+    margin-left: 5px;
+}
+.header {
+    display: flex;
+    align-items: center;
+    background-color: #121212;
+    color: #CFFF15;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.header>h1 {
+    margin-left: 435px;
+}
+  
+.navbar {
+    background-color: #CFFF15;
+    padding: 5px;
+    text-align: center;
+}
+nav>a {
+    color: #121212;
+    text-decoration: none;
+    margin-right: 30px;
+    font-weight: bold;
+}
+
+.presentacion {
+    text-align: center;
+    background-color: #121212;
+    color: #CFFF15;
+    padding: 100px 20px;
+}
+.presentacion>h2 {
+    margin-bottom: 20px;
+}
+.presentacion>p {
+    color: white;
+}
+
+.productos img {
+    width: 200px;
+}
+
+table, tr, td, th {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
