--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -94,7 +94,11 @@ nav>a {
     margin: 10px 0;
     color: #CFFF15;
 }
-.detalle p, h5 {
+.detalle p {
+    margin: 10px 0;
+    color: white;
+}
+.detalle h5 {
     margin: 10px 0;
     color: white;
 }
@@ -125,9 +129,81 @@ nav>a {
     padding: 20px;
 }
 
+.about h2 {
+    text-align: center;
+    margin: 40px 0 40px;
+    padding: 20px;
+    color: #121212;
+}
+.about p {
+    width: 900px;
+    margin-left: 200px;
+    text-align: center;
+    margin-bottom: 60px;
+}
+.body-about {
+    background-color: #E6E6E6;
+}
+.about {
+    background-color: white;
+    margin: 15px;
+    padding: 10px;
+    border-radius: 10px;
 
+}
 
+.team h3 {
+    text-align: center;
+    margin: 40px 0 40px;
+    color: #121212;
+}
 
+.contenedor {
+    display: flex;
+    justify-content: space-around;
+}
+.miembro {
+    background-color: #121212;
+    padding: 50px;
+    border-radius: 10px;
+    text-align: center;
+}
+.miembro img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
+.miembro h4 {
+    color: #121212;
+    background-color: #CFFF15;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+.miembro h5 {
+    color: white;
+    margin-bottom: 10px;
+}
+.miembro p {
+    color: white;
+}
+
+.nuestros-valores {
+    text-align: center;
+    background-color: white;
+    padding: 40px 0 20px;
+    margin: 15px;
+    line-height: 1.4;
+    border-radius: 15px;
+}
+.valores dt {
+    font-weight: bolder;
+}
+.nuestros-valores h3 {
+    margin-bottom: 20px;
+}
 
 
 
