--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -24,7 +24,7 @@ footer{
 
 .header>img {
     width: 75px;
-    margin-left: 5px;
+    margin-left: 15px;
 }
 .header {
     display: flex;
@@ -35,7 +35,7 @@ footer{
     padding-bottom: 10px;
 }
 .header>h1 {
-    margin-left: 435px;
+    margin-left: 420px;
 }
   
 .navbar {
@@ -162,7 +162,8 @@ nav>a {
 }
 .miembro {
     background-color: #121212;
-    padding: 50px;
+    width: 300px;
+    padding: 15px;
     border-radius: 10px;
     text-align: center;
 }
