--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -289,8 +289,6 @@ nav>a {
     text-decoration: none;
 }
 
-
-
 table, tr, td, th {
     border: 3px solid white;
     border-collapse: collapse;
@@ -311,4 +309,83 @@ table, tr, td, th {
 }
 .beneficios td {
     background-color: #E6E6E6;
+}
+
+.contenedor-contact {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+.main-contact h2 {
+    text-align: center;
+    margin: 40px 0 40px;
+    padding: 20px;
+    color: #121212;
+}
+.iframe-map {
+    width: 50%;
+    height: 400px;
+    background-color: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    color: #333;
+    margin-right: 20px;
+}
+.form-container {
+    width: 40%;
+}
+.form-container h2 {
+    margin-bottom: 20px;
+}
+.form-group {
+    margin-bottom: 15px;
+}
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+.form-group input[type="text"],
+.form-group input[type="email"],
+.form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.form-group input[type="checkbox"] {
+    margin-right: 10px;
+}
+.checkbox-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.checkbox-group label {
+    flex: 1 1 45%;
+}
+.radio-group {
+    display: flex;
+    align-items: center;
+}
+.radio-group input[type="radio"] {
+    margin-right: 5px;
+}
+.radio-group label {
+    margin-right: 20px;
+}
+.buttons {
+    display: flex;
+    justify-content: space-evenly;
+}
+.buttons button {
+    padding: 10px 20px;
+    width: 200px;
+    border: none;
+    border-radius: 5px;
+    background-color: #121212;
+    color: #CFFF15;
+    cursor: pointer;
+    margin-bottom: 40px;
 }
