--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -311,81 +311,69 @@ table, tr, td, th {
     background-color: #E6E6E6;
 }
 
-.contenedor-contact {
-    display: flex;
-    justify-content: space-between;
+.main-contacto{
+    background-color: #E6E6E6;
+    padding: 40px 0 40px 0;
+}
+.formulario-contacto {
+    max-width: 600px;
+    margin: auto;
     padding: 20px;
-}
-.main-contact h2 {
-    text-align: center;
-    margin: 40px 0 40px;
-    padding: 20px;
-    color: #121212;
-}
-.iframe-map {
-    width: 50%;
-    height: 400px;
-    background-color: #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: #333;
-    margin-right: 20px;
-}
-.form-container {
-    width: 40%;
-}
-.form-container h2 {
-    margin-bottom: 20px;
-}
-.form-group {
-    margin-bottom: 15px;
-}
-.form-group label {
-    display: block;
-    margin-bottom: 5px;
-}
-.form-group input[type="text"],
-.form-group input[type="email"],
-.form-group textarea {
-    width: 100%;
-    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 10px 121212(0, 0, 0, 0.1);
 }
-.form-group input[type="checkbox"] {
-    margin-right: 10px;
+.formulario-contacto h2 {
+    text-align: center;
+    margin-bottom: 15px;
 }
-.checkbox-group {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+.formulario-contacto label {
+    display: block;
+    margin-top: 10px;
 }
-.checkbox-group label {
-    flex: 1 1 45%;
+.formulario-contacto input[type="text"],
+.formulario-contacto input[type="email"],
+.formulario-contacto textarea {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    border: 1px solid #333;
+    border-radius: 3px;
+    box-sizing: border-box;
 }
-.radio-group {
-    display: flex;
-    align-items: center;
+.categorias-contacto label {
+    display: inline-block;
+    margin-right: 50px;
+    margin-left: 50px;
 }
-.radio-group input[type="radio"] {
-    margin-right: 5px;
+.suscripcion label {
+    display: inline-block;
+    margin-right: 50px;
 }
-.radio-group label {
-    margin-right: 20px;
-}
-.buttons {
+.botones-contacto {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 20px;
 }
-.buttons button {
+.botones-contacto button {
     padding: 10px 20px;
-    width: 200px;
+    width: 150px;
     border: none;
-    border-radius: 5px;
-    background-color: #121212;
-    color: #CFFF15;
+    border-radius: 3px;
+    background-color: #333;
+    color: white;
     cursor: pointer;
-    margin-bottom: 40px;
+}
+.botones-contacto button:hover {
+    background-color: #555;
+}
+.mapa {
+    margin-top: 20px;
+    text-align: center;
+}
+.mapa iframe {
+    width: 100%;
+    height: 200px;
+    border-radius: 15px;
 }
