coreccion de scroll horizontal

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,14 +28,18 @@ footer{
 }
 .header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     background-color: #121212;
     color: #CFFF15;
     padding-top: 10px;
     padding-bottom: 10px;
 }
-.header>h1 {
-    margin-left: 420px;
+.site-name {
+    background-color: #121212;
+    text-align: center;
+    color: #CFFF15;
+    padding-bottom: 20px;
 }
   
 .navbar {
@@ -80,12 +84,13 @@ nav>a {
 .productos {
     background-color: white;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 .detalle {
     background-color: #121212;
     text-align: center;
-    padding: 5px 110px 15px;
+    padding: 5px 50px 15px;
     border-radius: 10px;
     margin: 10px;
 }
@@ -115,6 +120,7 @@ nav>a {
 }
 .imagen-categoria {
     display: flex;
+    flex-wrap: wrap;
     justify-content:space-around
 
 }
@@ -135,9 +141,9 @@ nav>a {
     color: #121212;
 }
 .about p {
-    width: 900px;
-    margin-left: 200px;
+    width: 500px;
     text-align: center;
+    margin: 20px auto;
     margin-bottom: 60px;
 }
 .body-about {
@@ -162,7 +168,7 @@ nav>a {
 }
 .miembro {
     background-color: #121212;
-    width: 300px;
+    width: 250px;
     padding: 15px;
     border-radius: 10px;
     text-align: center;
